@@ -1,3 +1,3 @@
 show foo
      ^
-6: error: "foo": not defined as type via define or typedef
+6: error: "foo": not defined as type via define, enum, struct, typedef, or union
